2.9.4 (2024-03-07)
-----------------------------
* General
  - Added "driver_name_shorten" option for
    Relative, Rivals, Standings Widgets,
    which shortens driver's first name to a single letter
    with a period separating driver's last name,
    and any middle names will not be displayed.
    Note, if a driver is using nickname that consists only a single word,
    the name will not be shortened.

* Vehicle Brand Editor
  - Removed some obsolete code.

* Misc
  - Updated Relative Widget entries in user guide.

2.9.3 (2024-03-05)
-----------------------------
* [New]Rivals Widget
  - Added new Rivals Widget, which displays standings info
    from opponent ahead and behind local player from same vehicle class.
    Most options are same as from Standings or Relative Widget.
  - Added "*_color_time_interval_ahead" & "*_color_time_interval_behind"
    color options for customize time interval display.

* Relative Module
  - Added addition calculation for finding opponent ahead and behind
    local player from same vehicle class.

* Misc
  - Added Rivals Widget entries in user guide.

2.9.2 (2024-03-05)
-----------------------------
* Vehicle Brand Editor
  - Added support for importing vehicle data from RF2.
    How to export vehicle brand data from RF2 API:
    1. Start RF2, then open following link in web browser:
    localhost:5397/rest/race/car
    2. Click "Save" button which saves vehicle data to JSON file.
    Max importing file size is limited to 5mb.
  - Replaced editor List view with Table view,
    which is more efficient when processing large data set.

* Misc
  - Updated Brands preset entries in user guide.

2.9.1 (2024-03-04)
-----------------------------
* Relative Widget
  - Added "driver_name_align_center" & "vehicle_name_align_center" options,
    which align driver or vehicle name in the center when enabled.
    Default is left alignment when disabled.

* Standings Widget