@@ -1659,19 +1659,24 @@ WIDGET_DEFAULT = {
         "freeze_duration": 10,
         "font_color_wear_difference": "#CCCCCC",
         "bkg_color_wear_difference": "#222222",
-        "show_lifespan": True,
-        "font_color_lifespan": "#CCCC22",
-        "bkg_color_lifespan": "#222222",
+        "show_lifespan_laps": True,
+        "font_color_lifespan_laps": "#CCCC22",
+        "bkg_color_lifespan_laps": "#222222",
+        "show_lifespan_mins": False,
+        "font_color_lifespan_mins": "#66CCCC",
+        "bkg_color_lifespan_mins": "#222222",
         "warning_threshold_remaining": 30,
         "warning_threshold_wear": 3,
         "warning_threshold_laps": 5,
+        "warning_threshold_mins": 6,
         "font_color_warning": "#FF2200",
         "show_caption": True,
         "font_color_caption": "#CCCCCC",
         "bkg_color_caption": "#777777",
         "column_index_remaining": 1,
         "column_index_wear_difference": 2,
-        "column_index_lifespan": 3,
+        "column_index_lifespan_laps": 3,
+        "column_index_lifespan_mins": 4,
     },
     "weather": {
         "enable": True,
